src/objects/WGUStudentPerformanceSurvey__c.object
<CustomObject>
    <description>Answers to student performance survey questions, completed by student mentors via the student notes UI. NOTE: The Labels are different than the Object Name to match verbiage of the Notes.</description>
    <fields>
        <fullName>EvidenceOfAcademicActivity__c</fullName>
        <inlineHelpText>What evidence is present that this student has been academically active since the previous call?</inlineHelpText>
        <label>Evidence Of Academic Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Engaged in New Student Protocols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged in a Learning Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilized a Community Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended a Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met with a Course Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took a Pre-Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled an Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took and Failed an Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took and Passed an Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted a TaskStream Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised a TaskStream Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Evidence is Present</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GoalPerformanceSinceLastCall__c</fullName>
        <inlineHelpText>How has student performed against academic goals set in the last call?</inlineHelpText>
        <label>Goal Performance Since Last Call</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - 100%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - 0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Student (Contact) whose WGUStudentNote__c record is associated with this Performance Survey Record (1:1)</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>WGUStudentPerformanceSurveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUStudentNote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WGUStudentNote</label>
        <referenceTo>WGUStudentNote__c</referenceTo>
        <relationshipName>WGUStudentPerformanceSurveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Student Performance Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Note Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Performance Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>